Correction du commit de fonction dark mode
Changement du nom de classe "liste-fleche" en "arrow" pour être compatible avec la fonction (le nom de l'image et le nom de la classe doivent être identiques)

--- a/src/css/positioning-temporaire.scss
+++ b/src/css/positioning-temporaire.scss
@@ -47,7 +47,7 @@ main h1 {
 	padding: 10px;
 }
 
-main img.liste-fleche {
+main img.arrow {
 	display: block;
 	margin: 0 auto;
 	width: 22px;
