--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -90,7 +90,7 @@ main h1 {
 	padding: 10px;
 }
 
-main img.liste-fleche {
+main img.arrow {
 	display: block;
 	margin: 0 auto;
 	width: 22px;
